# azure-iot-middleware-freertos

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  NOTICE  README.md  SUPPORT.md  annotated.html  azure__iot_8h.html  azure__iot_8h_source.html  azure__iot__adu__client_8h.html  azure__iot__adu__client_8h_source.html  azure__iot__config__defaults_8h_source.html  azure__iot__crypto_8h.html  azure__iot__crypto_8h_source.html  azure__iot__flash__platform_8h.html  azure__iot__flash__platform_8h_source.html  azure__iot__http_8h.html  azure__iot__http_8h_source.html  azure__iot__hub__client_8h.html  azure__iot__hub__client_8h_source.html  azure__iot__hub__client__properties_8h.html  azure__iot__hub__client__properties_8h_source.html  azure__iot__json__reader_8h.html  azure__iot__json__reader_8h_source.html  azure__iot__json__writer_8h.html  azure__iot__json__writer_8h_source.html  azure__iot__jws_8h.html  azure__iot__jws_8h_source.html  azure__iot__message_8h.html  azure__iot__message_8h_source.html  azure__iot__mqtt_8h.html  azure__iot__mqtt_8h_source.html  azure__iot__provisioning__client_8h.html  azure__iot__provisioning__client_8h_source.html  azure__iot__result_8h.html  azure__iot__result_8h_source.html  azure__iot__transport__interface_8h.html  azure__iot__transport__interface_8h_source.html  azure__iot__version_8h.html  (+99 more)
.build/: install_softwares.sh
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/config/: FreeRTOSConfig.h  azure_iot_config.h  core_http_config.h  core_mqtt_config.h
.github/scripts/: ci_tests.sh  clang_build.sh  code_style.sh  doxygen.sh  e2e_tests.sh  fetch_freertos.sh  init_linux_port_vm_network.sh  init_vm_network.sh  install_software.sh  style_check.sh  unit_tests.sh
.github/workflows/: build_docs.yml  c-cpp.yml.yml  msbuild.yml  (+2 more)
config_templates/: azure_iot_config.h
doc/: comparison.md
docs/: Doxyfile  amazon_freertos_port.md  aws_freertos_port.md  azure_iot_c_sdk_port.md  c_sdk_port.md  how_to_use_adu_client.md
doxygen/: Doxyfile
html/: azure__iot_8h.html  azure__iot__hub__client_8h.html  azure__iot__mqtt_8h.html  azure__iot__provisioning__client_8h_source.html  azure__iot__version_8h.html  azure__iot__version_8h_source.html  classes.html  dir_3750548c40d9045ee3b3d006c00db089.html  files.html  functions_vars.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  menudata.js  struct_azure_io_t_hub_client.html  struct_azure_io_t_m_q_t_t_connect_info.html  struct_azure_io_t_m_q_t_t_subscribe_info.html  struct_azure_io_t_message_properties.html  struct_azure_io_t_provisioning_client.html  struct_azure_io_t_provisioning_client_options.html  struct_azure_io_t_transport_interface.html
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  classes_0.js  defines_0.js  defines_1.js  enums_0.js  enumvalues_0.js  files_0.js  functions_0.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  pages_4.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js
source/: CMakeLists.txt  azure_iot.c  azure_iot_adu_client.c  azure_iot_hub_client.c  azure_iot_hub_client_properties.c  azure_iot_internal.c  azure_iot_json_reader.c  azure_iot_json_writer.c  azure_iot_message.c  azure_iot_private.h  azure_iot_provisioning_client.c
source/include/: azure_iot.h  azure_iot_adu_client.h  azure_iot_config_defaults.h  azure_iot_hub_client.h  azure_iot_hub_client_properties.h  azure_iot_json_reader.h  azure_iot_json_writer.h  azure_iot_message.h  azure_iot_provisioning_client.h  azure_iot_result.h  azure_iot_version.h
source/include/internal/: azure_iot_internal.h
source/interface/: azure_iot_crypto.h  azure_iot_flash_platform.h  azure_iot_http.h  azure_iot_jws.h  azure_iot_mqtt.h  azure_iot_transport_interface.h
tests/: CMakeLists.txt  azure_iot_cmocka_mqtt.c  azure_iot_hub_client_ut.c  azure_iot_mqtt_port.h  azure_iot_provisioning_client_ut.c  azure_iot_ut.c  main.c
tests/config_files/: FreeRTOSConfig.h  FreeRTOSIPConfig.h  azure_iot_config.h  core_http_config.h  core_mqtt_config.h  mbedtls_config.h
tests/e2e/: CMakeLists.txt  Readme.md  run.sh
tests/e2e/adu/: CMakeLists.txt  run.sh
tests/e2e/adu/device/: e2e_device_commands.c  e2e_device_process_commands.h  e2e_device_task.c  main.c  sockets_wrapper.h  sockets_wrapper_freertos_tcpip.c  transport_abstraction.h  transport_socket.c  transport_socket.h
tests/e2e/adu/service/: ImportUpdate.ps1  README.md  create_and_import_manifest.ps1  e2e.py  mocha_exec.sh  package.json
tests/e2e/adu/service/adu_client/: e2e_adu_client_test.ts
tests/e2e/adu/service/common/: e2e_test_cleanup.ts  e2e_test_commands.ts  e2e_test_core.ts
tests/e2e/device/: FreeRTOSConfig.h  FreeRTOSIPConfig.h  Makefile  e2e_device_commands.c  e2e_device_process_commands.h  e2e_device_task.c  main.c  mbedtls_freertos_port.c
tests/e2e/device/config/: azure_iot_config.h  core_mqtt_config.h
tests/e2e/iot/: CMakeLists.txt  run.sh
tests/e2e/iot/device/: e2e_device_commands.c  e2e_device_process_commands.h  e2e_device_task.c
tests/e2e/iot/service/: mocha_exec.sh  package.json
tests/e2e/iot/service/common/: e2e_test_cleanup.ts  e2e_test_core.ts
tests/e2e/iot/service/iothub_client/: e2e_iot_hub_client_test.ts
tests/e2e/iot/service/provisioning_client/: e2e_iot_provisioning_client_test.ts
tests/e2e/service/: mocha_exec.sh  package.json  tsconfig.json
tests/e2e/service/common/: e2e_test_cleanup.ts  e2e_test_commands.ts  e2e_test_core.ts
tests/e2e/service/iothub_client/: e2e_iot_hub_client_test.ts
tests/e2e/service/provisioning_client/: e2e_iot_provisioning_client_test.ts
tests/ut/: CMakeLists.txt  Readme.md  azure_iot_adu_client_ut.c  azure_iot_cmocka_mqtt.c  azure_iot_hub_client_properties_ut.c  azure_iot_hub_client_ut.c  azure_iot_internal_ut.c  azure_iot_json_reader_ut.c  azure_iot_json_writer_ut.c  azure_iot_jws_mbedtls_ut.c  azure_iot_mqtt_port.h  azure_iot_provisioning_client_ut.c  azure_iot_ut.c  main.c
tests/ut/mbedtls/: mbedtls_freertos_port.c
(+172 files in other folders)
